# Stock-Valuation-Tool

./: .gitignore  balance_sheet.csv  income_statement.csv  pyproject.toml
api_tests/: alphavantage.py  alphavantage.txt  eod_historical_data.py  eod_historical_data.txt  fmp.py  fmp.txt
config/: config.json
src/stock_valuation/: __init__.py  __main__.py  test.py
src/stock_valuation/entry_points/: _pipeline.py
src/stock_valuation/exceptions/: __init__.py  _exceptions.py
src/stock_valuation/modelling/: _modelling.py
src/stock_valuation/preprocessing/: _preprocessing.py
src/stock_valuation/reporting/: __init__.py  _reporting.py
src/stock_valuation/utils/: __init__.py  _models.py
src/stock_valuation_tool/: __init__.py  __main__.py
src/stock_valuation_tool/entry_points/: _pipeline.py
src/stock_valuation_tool/exceptions/: __init__.py  _exceptions.py
src/stock_valuation_tool/modelling/: __init__.py  _modelling.py  _models.py
src/stock_valuation_tool/preprocessing/: _preprocessing.py
src/stock_valuation_tool/reporting/: __init__.py  _reporting.py
src/stock_valuation_tool/utils/: _decorators.py  _models.py
tests/unit/: test_custom_pe_model.py  test_exponential_model.py  test_linreg_model.py  test_median_pe_model.py  test_model_selection.py
